--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -4,15 +4,9 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>tabs</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
-
+    <ion-tabs>
+      <ion-tab tabIcon="list-box" [root]="shoppingListPage" tabTitle="Shopping List"></ion-tab>
+      <ion-tab tabIcon="book" [root]="recipesPage" tabTitle="Shopping List"></ion-tab>
+    </ion-tabs>
 </ion-content>
