implemented reactive template

--- a/src/pages/edit-recipe/edit-recipe.html
+++ b/src/pages/edit-recipe/edit-recipe.html
@@ -7,12 +7,32 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>edit-recipe</ion-title>
+    <ion-title> {{ mode }} recipe</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()"> 
+    <ion-list>
+      <ion-item>
+        <ion-label floating> Title</ion-label>
+        <ion-input type="text"
+        formControlName="title"> </ion-input>
+      </ion-item>
+      <ion-item>
+          <ion-label floating> Description </ion-label>
+          <ion-textarea formControlName="description"> </ion-textarea>
+        </ion-item>
+        <ion-item>
+            <ion-label floating> Difficulty </ion-label>
+            <ion-select formControlName="difficulty">
+              <ion-option *ngFor="let opt of selectOptions"
+              [value]="opt"> {{ opt }} </ion-option>  
+            </ion-select>
+          </ion-item>
+    </ion-list>
+    <button type="submit" ion-button block> {{ mode }} Recipe </button>
+  </form>
 </ion-content>
