--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -7,7 +7,13 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>recipes</ion-title>
+    <ion-title text-center>Recipes</ion-title>
+    <ion-buttons end>
+        <button ion-button icon-only (click)="onNewRecipe()">
+            <ion-icon name="add"></ion-icon>
+          </button>
+    </ion-buttons>
+
   </ion-navbar>
 
 </ion-header>
