--- a/src/pages/edit-recipe/edit-recipe.html
+++ b/src/pages/edit-recipe/edit-recipe.html
@@ -33,6 +33,18 @@
             </ion-select>
           </ion-item>
     </ion-list>
+    <button ion-button 
+    clear block
+    (click)="onManageIngredients()"> Manage Ingredients </button>
+    <ion-list formArrayName="ingredients">
+      <ion-item *ngFor="let igControl of recipeForm.get('ingredients').controls; 
+      let i = index">
+        <ion-label> Name </ion-label>
+        <ion-input type="text" [formControlName]="i">
+        </ion-input>
+      </ion-item>
+    </ion-list>    
     <button type="submit" ion-button block> {{ mode }} Recipe </button>
   </form>
+
 </ion-content>
