--- a/src/pages/recipe/recipe.html
+++ b/src/pages/recipe/recipe.html
@@ -14,5 +14,11 @@
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item *ngFor="let recipe of allRecipes">
+      <h4> {{ recipe.title }}</h4>
+      <p> {{ recipe.description }}</p>
+      <ion-note> {{ recipe.difficulty }}</ion-note>
+    </ion-item>  
+  </ion-list>
 </ion-content>
