--- a/src/pages/recipe/recipe.html
+++ b/src/pages/recipe/recipe.html
@@ -1,24 +1,68 @@
 <!--
   Generated template for the RecipePage page.
-
+  
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
-
+  
   <ion-navbar>
-    <ion-title>recipe</ion-title>
+    <ion-title> {{ recipe.title }}</ion-title>
   </ion-navbar>
-
+  
 </ion-header>
 
 
 <ion-content padding>
-  <ion-list>
-    <ion-item *ngFor="let recipe of allRecipes">
-      <h4> {{ recipe.title }}</h4>
-      <p> {{ recipe.description }}</p>
-      <ion-note> {{ recipe.difficulty }}</ion-note>
-    </ion-item>  
-  </ion-list>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <h2> {{ recipe.title }}</h2>
+        <div> {{ recipe.difficulty }} </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <p> {{ recipe.description }} </p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-list>
+          <ion-item *ngFor="let ingredient of recipe.ingredients">
+            {{ ingredient.name }}
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="!recipe.ingredients.length > 0">
+      <ion-col>
+        <button
+        ion-button
+        clear 
+        (click)="onAddIngredients()">
+        Add Ingredients to Shopping List
+        </button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+        <ion-col col-6>
+            <button
+            ion-button
+            outline
+            (click)="onEditRecipe()">
+            Edit Recipe
+            </button>
+        </ion-col>
+        <ion-col col-6>
+          <button
+          ion-button
+          outline
+          color="danger"
+          (click)="onDeleteRecipe()">
+          Delete Recipe
+          </button>
+        </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
